Increment: Add Assertions
Assertions are used to define assumptions about the program state so that the runtime can verify them

Adding assertions so that it prevents drastic actions or errors that were not potentially addressed during error catching

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ test {
 application {
 //    mainClass.set("megabot.Megabot")
     mainClass.set("Launcher")
+    applicationDefaultJvmArgs = ["-ea"]
 }
 
 
