--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,13 +1,14 @@
 name: Java CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+    runs-on: macos-latest
 
     steps:
       - name: Set up repository
@@ -31,24 +32,17 @@ jobs:
           java-version: '17'
           java-package: jdk+fx
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+          - name: Build with Gradle
+            run: ./gradlew build
+          - name: Run tests with Gradle
+            run: ./gradlew test
+
       - name: Build and check with Gradle
         run: ./gradlew check
-
-      - name: Install dos2unix on Linux
-        if: runner.os == 'Linux'
-        run: sudo apt-get update && sudo apt-get install -y dos2unix
 
       - name: Install dos2unix on macOS
         if: runner.os == 'macOS'
         run: brew install dos2unix
 
-      - name: Perform IO redirection test (*NIX or macOS)
-        if: runner.os == 'Linux' || runner.os == 'macOS'
-        working-directory: ${{ github.workspace }}/text-ui-test
-        run: ./runtest.sh
-
-      - name: Perform IO redirection test (Windows)
-        if: always() && runner.os == 'Windows'
-        working-directory: ${{ github.workspace }}/text-ui-test
-        shell: cmd
-        run: runtest.bat
