--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,8 +36,9 @@ jobs:
           java-package: jdk+fx
 
       - name: Build and check with Gradle
-        run: ./gradlew check
+        run: ./gradlew check --no-daemon --quiet
 
-      - name: Install dos2unix on macOS
-        if: runner.os == 'macOS'
-        run: brew install dos2unix
+      - name: Build with Gradle (Windows)
+        if : runner.os == 'Windows'
+        working-directory: ${{ github.workspace }}
+        run: ./gradlew build --no-daemon --console=plain
