Edit gradlew.yml file

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,6 @@ jobs:
       - name: Build and check with Gradle
         run: ./gradlew check --no-daemon --quiet
 
-      - name: Build with Gradle (Windows)
-        if : runner.os == 'Windows'
-        working-directory: ${{ github.workspace }}
-        run: ./gradlew build --no-daemon --console=plain
+      - name: Install dos2unix on macOS
+        if: runner.os == 'macOS'
+        run: brew install dos2unix
