--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
           java-package: jdk+fx
 
       - name: Build and check with Gradle
-        run: ./gradlew check --no-daemon --quiet
+        run: ./gradlew check
 
       - name: Install dos2unix on macOS
         if: runner.os == 'macOS'
