--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ test {
 
 application {
 //    mainClass.set("megabot.Megabot")
-    mainClass.set("Launcher")
+    mainClass.set("megabot.Launcher")
     applicationDefaultJvmArgs = ["-ea"]
 }
 
@@ -61,4 +61,5 @@ shadowJar {
 
 run{
     standardInput = System.in
+    enableAssertions = true;
 }
