Add gradlew clean in gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,9 @@ jobs:
           java-version: '17'
           java-package: jdk+fx
 
+      - name: Clean Gradle
+        run: ./gradlew clean
+
       - name: Build and check with Gradle
         run: ./gradlew check
 
